<resources>
    <string name="app_name">Hangang</string>

    <string name="image">한강몽땅1</string>
    <string name="notice">공지사항\n2018.08.15 한강그림놀이페스티벌 운영시간</string>
    <string name="btn1">시원한강\n프로그램</string>
    <string name="btn2">감동한강\n프로그램</string>
    <string name="btn3">자연한강\n프로그램</string>
    <string name="today">#오늘의 행사</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
